# mimmo

./: .gitignore  Cargo.toml  NSFW_FILENAME_DETECTION_RESEARCH.md  NSFW_IMPLEMENTATION_PLAN.md  PLAN_metadata_extraction.md  README.md  ai_torrent_analyzer.py  build.rs  dht_search.py  dht_search_tui.py  test_ground_truth.json
prompts/: classify.txt
scripts/: album_heuristics.py  build_classifier.sh  cascade_extraction.py  eval_checkpoint_cpu.py  evaluate_classifier.py  evaluate_extraction.py  export_training_data.py  extract_mb_aliases.py  fetch_musicbrainz_metadata.py  fetch_tmdb_metadata.py  generate_test_cases.py  import_validated_audio.py  match_torrents.py  prepare_llm_training_data.py  reverse_match_magnetico.py  sample_magnetico_audio.py  test_cascade_100.py  test_gliner.py  test_nuextract.py  test_smollm.py  train_smollm.py  validate_spotify.py
src/: format.rs  lib.rs  main.rs  metadata.rs
src/cascade/: mod.rs  samples_test.rs  stage.rs  types.rs
src/cascade/stages/: extensions.rs  ml.rs  mod.rs  patterns.rs
src/nsfw/: keywords.rs  ml.rs  mod.rs  patterns.rs
training/: NSFW_LABELING_STATUS.md  consensus_labeler.py  convert_to_onnx.py  extract_album_pairs.py  extract_artist_pairs.py  extract_content_samples.py  extract_music_torrents.py  fixup_labels.py  medium_labeler.py  monitor.py  train_classifier.py  train_classifier_mini.py
training/bert-classifier-mini/: config.json
