[package]
name = "mimmo"
version = "0.1.0"
edition = "2021"
description = "BERT-based torrent content classifier"
license = "MIT"
repository = "https://github.com/lelloman/mimmo"
keywords = ["torrent", "classifier", "media", "bert"]
categories = ["command-line-utilities", "multimedia"]

[lib]
name = "mimmo"
path = "src/lib.rs"

[[bin]]
name = "mimmo"
path = "src/main.rs"

[dependencies]
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }
tokenizers = "0.21"
ndarray = "0.17"
zip = "2"
tar = "0.4"
flate2 = "1"
xz2 = "0.1"
lava_torrent = "0.11"
regex = "1"
once_cell = "1"
